[package]
name = "imgui-test"
version = "0.1.0"
authors = ["Laurent Bernabe <laurent.bernabe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui = "0.1.0"
glium = "0.25.1"
imgui-glium-renderer = "0.1.0"
imgui-winit-support = "0.1.0"